fixed line spacing and letter spacing for about me section

--- a/style.css
+++ b/style.css
@@ -150,6 +150,8 @@ p {
 
 .section__paragraph {
     padding-top: 1.5rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.05rem;
     width: 80%;
     margin: auto;
 }
